# mysql-cdc

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  readme.md
binlog/: bitset.h  byte_buffer.h  client.cpp  client.h  deserializer.cpp  deserializer.h  event.h  event_header.h  format_descirption_event.h  observer.h  table_map_event.h  util.h  write_row_event.h
test/: tc.cpp  test.cpp
